--- a/index.html
+++ b/index.html
@@ -12,19 +12,60 @@
       href="./assets/images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="styles/normalise.css" />
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Results summary component |Frontend Mentor</title>
   </head>
   <body>
-    Your Result 76 of 100 Great You scored higher than 65% of the people who
-    have taken these tests. Summary Reaction 80 / 100 Memory 92 / 100 Verbal 61
-    / 100 Visual 72 / 100 Continue
+    <article class="canvas">
+      <section class="box box1">
+        <div><h1>Your Result</h1></div>
+        <div>
+          <span>76</span>
+          <span>of 100</span>
+        </div>
+        <div>
+          <h2>Great</h2>
+          <p>
+            You scored higher than 65% of the people who have taken these tests.
+          </p>
+        </div>
+      </section>
+
+      <section class="box box2">
+        <h2>Summary</h2>
+        <div>
+          <img src="assets/images/icon-reaction.svg" alt="" />
+          <span>Reaction</span>
+          <span><span class="score">80</span> / 100 </span>
+        </div>
+        <div>
+          <img src="assets/images/icon-memory.svg" alt="" />
+          <span>Memory</span>
+          <span><span class="score">92</span> / 100</span>
+        </div>
+        <div>
+          <img src="assets/images/icon-verbal.svg" alt="" />
+          <span>Verbal</span>
+          <span><span class="score">61</span> / 100</span>
+        </div>
+
+        <div>
+          <img src="assets/images/icon-visual.svg" alt="" />
+          <span>Visual</span>
+          <span><span class="score">72</span> / 100</span>
+        </div>
+        <button>continue</button>
+      </section>
+    </article>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://www.github.com/tiana-coker" target="_blank">Tiana Coker</a>.
+      >. Coded by
+      <a href="https://www.github.com/tiana-coker" target="_blank"
+        >Tiana Coker</a
+      >.
     </div>
   </body>
 </html>
